# deltakit-textbook

./: .gitignore  LICENSE  README.md  _config.yml  index.html  noxfile.py  pyproject.toml  release.md  requirements.txt
.github/workflows/: deploy_pages.yml  release.yml
docs/: conf.py  index.ipynb  index.md  requirements.txt
docs/_static/: overrides.css
docs/_templates/: layout.html  page-toc.html
docs/examples/: interactive_widgets.ipynb
docs/notebooks/: about-this-textbook.ipynb  bit-flip-repetition-codes.ipynb  classical-intuition.ipynb  contents.ipynb  correctable-errors.ipynb  decoder-library.ipynb  decoding-surface-codes.ipynb  elements_of_qec.ipynb  introduction-to-surface-codes.ipynb  phase-flip-repetition-codes.ipynb  phase_flip_rep_codes.py  repetition-and-shor-codes-stim.ipynb  running-faster-circuit-simulations.ipynb  shor-code.ipynb  surfacecodeviz.py
docs/notebooks/ch1-intuition/: classical-intuition.ipynb  majority-vote-vs-parity-check.ipynb  motivation-for-qec.ipynb
docs/notebooks/ch2-classical-to-quantum-repcodes/: bit-flip-repetition-codes.ipynb  correctable-errors.ipynb  myMWPM.py  phase-flip-repetition-codes.ipynb  phase_flip_rep_codes.py  running-faster-circuit-simulations.ipynb  shor-code.ipynb
docs/notebooks/ch3-state-of-art-tools/: my_tools.py  repetition-and-shor-codes-stim.ipynb
docs/notebooks/ch4-repcodes-to-surfcodes/: introduction-to-surface-codes.ipynb  layout-unrotated-surface-code-stabilizers.ipynb  surfacecodeviz.py  syndrome-extraction-cycle-surface-code.ipynb
docs/notebooks/ch5-decoding-surfcodes/: decoding-surface-codes.ipynb  simulating-surface-codes-stim.ipynb
docs/notebooks/ch6-decoder-library/: decoder-library.ipynb
